fix: Fix flickering on iphone when touching tabs
Fixes #186

--- a/style/react-tabs.scss
+++ b/style/react-tabs.scss
@@ -14,6 +14,7 @@
     list-style: none;
     padding: 6px 12px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     &--selected {
       background: #fff;
